src/gwt/src/org/rstudio/core/client/theme/res/themeStyles.css
/* ... */
body {
   background: BACKGROUNDGRADIENT repeat-x top #e1e2e5;
}

body {
   font-family: proportionalFont;
   font-size: 12px;
   -ms-user-select: none;
   -moz-user-select: none;
   -webkit-user-select: none;
   user-select: none;
}

/* in IE, it's necessary to explicitly allow the selection of text in iframes:
 * otherwise, the iframes inherit the above CSS rule from the <body> tag */
body.windows iframe {
   -ms-user-select: text;
   -moz-user-select: text;
   -webkit-user-select: text;
   user-select: text;
}

select {
   font-size: 12px;
   background-color: white;
}

input[type="radio"] + label {
   margin-left: 2px;
}

input[type=text] {
   font-family: proportionalFont;
   padding-left: 4px;
}

input[type=text][disabled] {
   background-color: transparent;
}
button, input[type="reset"], input[type="button"], input[type="submit"] {
   color: black;
}

/* hide something from sighted users but remain visible to screen readers */
.visuallyHidden {
   position: absolute;
   clip: rect(0 0 0 0);
   border: 0;
   width: 1px;
   height: 1px;
   margin: -1px;
   overflow: hidden;
   padding: 0;
}

.gwt-TextBox-readonly {
   background: #f3f4f4;
}

.gwt-Label {
   cursor: default;
}

.selectableText {
   -ms-user-select: text;
   -moz-user-select: text;
   -webkit-user-select: text;
   user-select: text;
   cursor: text;
}

@if rstudio.desktop false {
@if user.agent safari {
.macintosh .forceMacScrollbars ::-webkit-scrollbar {
   -webkit-appearance: none;
   -moz-appearance: none;
   width: 12px;
   height: 12px;
}

.macintosh .forceMacScrollbars ::-webkit-scrollbar-track {

   background: rgb(251,251,251);
   -webkit-box-shadow: 0 1px 0 0 rgba(255,255,255,0.35);
   -webkit-border-radius: 5px;
}

.macintosh .forceMacScrollbars ::-webkit-scrollbar-thumb {

   border: 2px solid rgb(251,251,251);
   background: rgba(0,0,0,.22);
   -webkit-border-radius: 6px;
   -webkit-background-clip: padding-box;
}
}
@else {
.forceMacScrollbars {}
}
}
@else {
.forceMacScrollbars {}
}

.gwt-DialogBox input[type=text] {
   border: 1px solid #999;
   height: 25px;
   padding: 4px 6px;
}
.gwt-DialogBox .search input[type=text] {
   border: none;
   height: 100%;
}

iframe {
   border: none;
}

button {
   cursor: pointer;
}

.rstudio-themes-dark-menus hr {
   border-color: THEME_DARK_CONTROL_BACKGROUND;
}

.handCursor {
   cursor: pointer;
}

textarea {
   outline: none;
}

.rstudio-fixed-width-font {
   font-family: fixedWidthFont !important;
}

pre {
   font-family: fixedWidthFont;
   font-size: 12px;
}

.ace_editor {
   border: none !important;
}

.ace_editor, .ace_text-layer {
   font-family: fixedWidthFont !important;
}

.ace_active_debug_line {
   margin-left: -2px;
   margin-top: -1px;
   padding-right: 2px;
   padding-bottom: 2px;
}

.editor_light .ace_active_debug_line {
   background-color: rgb(255, 240, 180);
}

.editor_dark .ace_active_debug_line {
   background-color: rgb(54, 50, 8);
}

.ace_tooltip {
   max-width: 400px;
   max-height: 300px;
   overflow: hidden;
   white-space: pre-wrap;
}

.ace_breakpoint,
.ace_pending-breakpoint,
.ace_inactive-breakpoint,
.ace_executing-line,
.ace_next-edit-suggestion {
   background-position: 12% center !important;
   background-repeat: no-repeat !important;
}

.ace_breakpoint {
   background-image: ACTIVEBREAKPOINT !important;
   background-size: 10px 10px;
}

.ace_pending-breakpoint {
   background-image: PENDINGBREAKPOINT !important;
   background-size: 10px 10px;
}

.ace_inactive-breakpoint {
   background-image: INACTIVEBREAKPOINT !important;
   background-size: 10px 10px;
}

.ace_executing-line {
   background-image: EXECUTINGLINE !important;
   background-size: 10px 10px;
}

.ace_next-edit-suggestion::before {
   content: '';
   position: absolute;
   left: 0;
   top: 0;
   bottom: 0;
   width: 4px;
   background-color: #1E77BC;
   pointer-events: none;
}

/* Base class for NES gutter icons - defines the arrow shape */
.ace_nes-gutter .ace_gutter_annotation {
   position: relative;
   cursor: pointer;
}

.ace_nes-gutter .ace_gutter_annotation::before {
   content: '';
   position: absolute;
   left: 1px;
   top: 50%;
   transform: translateY(-50%);
   width: 16px;
   height: 16px;
   border-radius: 3px;
   cursor: pointer;
   background-color: #1E77BC;
}

.ace_nes-gutter .ace_gutter_annotation::after {
   content: '';
   position: absolute;
   left: 7px;
   top: 50%;
   transform: translateY(-50%);
   width: 0;
   height: 0;
   border-top: 4px solid transparent;
   border-bottom: 4px solid transparent;
   border-left: 5px solid white;
   cursor: pointer;
}

/* Darker blue background for all NES gutter cells */
.rstudio-themes-dark .ace_nes-gutter,
.rstudio-themes-dark .ace_nes-gutter-background {
   background-color: rgba(20, 60, 120, 0.75);
}

.ace_nes-gutter,
.ace_nes-gutter-background {
   background-color: rgba(20, 60, 120, 0.15);
}


/* Type-specific colored dots at bottom-right corner of the icon */
.ace_nes-gutter-deletion .ace_gutter_annotation::before {
   background-color: #1E77BC;
   background-image:
      radial-gradient(circle 1.5px at 12px 12px, #C62828 100%, transparent 100%),
      radial-gradient(circle 2.5px at 12px 12px, #000000 100%, transparent 100%);
}

.ace_nes-gutter-insertion .ace_gutter_annotation::before {
   background-color: #1E77BC;
   background-image:
      radial-gradient(circle 1.5px at 12px 12px, #2E7D32 100%, transparent 100%),
      radial-gradient(circle 2.5px at 12px 12px, #000000 100%, transparent 100%);
}

.ace_nes-gutter-replacement .ace_gutter_annotation::before {
   background-color: #1E77BC;
   background-image:
      radial-gradient(circle 1.5px at 12px 12px, #888888 100%, transparent 100%),
      radial-gradient(circle 2.5px at 12px 12px, #000000 100%, transparent 100%);
}

.ace_next-edit-suggestion-highlight {
   position: absolute;
   z-index: 1;
   background: rgba(128, 128, 128, 0.2) !important;
}
/* ... */

